[gd_scene load_steps=5 format=3 uid="uid://itempopup001"]

[ext_resource type="Script" path="res://scripts/ui/item_received_popup.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.12, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.95, 0.85, 0.4, 1)
corner_radius_left_top = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Animation" id="Animation_show"]
resource_name = "show"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupPanel:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopupPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_main"]
_data = {
"show": SubResource("Animation_show")
}

[node name="ItemReceivedPopup" type="CanvasLayer"]
layer = 3
script = ExtResource("1_script")

[node name="PopupPanel" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 150)

[node name="PanelBG" type="PanelContainer" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="SubViewportContainer" type="SubViewportContainer" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 220.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="PopupPanel/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(300, 200)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="PopupPanel/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0.5, 2)
fov = 40.0

[node name="ItemHolder" type="Node3D" parent="PopupPanel/SubViewportContainer/SubViewport"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PopupPanel/SubViewportContainer/SubViewport"]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 2, 2, 2)

[node name="ItemLabel" type="Label" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
theme_override_colors/font_color = Color(0.95, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "Cadeau re√ßu!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_main")
}

